Started coding html structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Kokpit - jachim.pl</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <a href="#">
+                <img src="" alt="Page logo">
+            </a>
+        </div>
+    </header>
 </body>
 </html>
