Added avatar to images folder

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <body>
     <header>
         <div>
-            <a href="#">
-                <img src="" alt="Page logo">
-            </a>
+            <a class="logo" href="#">jachim.pl</a>
+        </div>
+        <div>
+            <p class="user-name"></p>
+            <img class="user-avatar" src="#" alt="User avatar">
         </div>
     </header>
 </body>
