Created page logo

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-        <div>
-            <a class="logo" href="#">jachim.pl</a>
+        <div class="logo-container">
+            <a class="logo" href="#">jachim</a>
         </div>
         <div>
             <p class="user-name"></p>
-            <img class="user-avatar" src="#" alt="User avatar">
+            <img class="user-avatar" src="./images/avatar.svg" alt="User avatar">
         </div>
     </header>
 </body>
