--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Kokpit - jachim.pl</title>
 </head>
@@ -15,9 +18,9 @@
         <div class="logo-container">
             <a class="logo" href="#">jachim</a>
         </div>
-        <div>
-            <p class="user-name"></p>
-            <img class="user-avatar" src="./images/avatar.svg" alt="User avatar">
+        <div class="user-container">
+            <p class="user-name">marcin@jachim.pl</p>
+            <img class="user-avatar" src="./images/avatar.png" alt="User avatar">
         </div>
     </header>
 </body>
